--- a/src/Pages/LoginPage/Login.module.css
+++ b/src/Pages/LoginPage/Login.module.css
@@ -1,4 +1,4 @@
-.auth-form {
+.auth_form {
     width: 100vw;
     height: 100vh;
     background: #fff;
@@ -10,22 +10,24 @@
     text-align: center;
 }
 
-.auth-form__subtitle {
+.auth_form__subtitle {
     color: rgb(180, 184, 193);
     width: 213px;
 }
 
-.auth-form__form {
+.auth_form__form {
     max-width: 360px;
+    display: flex;
+    flex-direction: column;
 }
 
-.auth-form__keep-logged-in {
+.auth_form__keep-logged-in {
     display: flex;
     justify-content: flex-start;
     margin-top: 8px;
     margin-bottom: 16px;
 }
 
-.auth-form__footer {
+.auth_form__footer {
     margin-top: 8px;
 }
