--- a/src/Pages/LoginPage/Login.module.css
+++ b/src/Pages/LoginPage/Login.module.css
@@ -1,8 +1,6 @@
 .auth_form {
-    width: 100vw;
-    height: 100vh;
     background: #fff;
-    padding: 20px;
+    margin: 250px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
