--- a/src/Pages/MainPage/MainComponents/mainComponents.module.css
+++ b/src/Pages/MainPage/MainComponents/mainComponents.module.css
@@ -28,6 +28,7 @@ td {
 .active__print {
   display: flex;
   flex-wrap: wrap;
+  width: 1000px;
 }
 form {
   display: flex;
@@ -47,11 +48,15 @@ form * {
   justify-content: center;
 }
 .bth {
-  margin: 25px 890px 0 ;
-  padding: 10px 50px;
+  width: 100px;
   cursor: pointer;
 }
-
+.data {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 50px 0 8px;
+  align-items: center;
+}
   @media  print {
 
     .pagination {
