--- a/src/Pages/ClientPage/ClientComponents/ClientComponents.module.css
+++ b/src/Pages/ClientPage/ClientComponents/ClientComponents.module.css
@@ -10,8 +10,11 @@
     flex-direction: column;
 }
 .h1 {
+    display: flex;
     font-size: 25px;
-    margin: 0 0 25px 0;
+    justify-content: center;
+    margin: 5px 0;
+
 }
 
 .flex {
@@ -21,13 +24,18 @@
 }
 .family {
     width: 280px;
+    padding: 0;
+}
+.ffff {
+    margin: 2px;
+    box-shadow: 4px -3px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 .s {
     margin: 0;
     padding: 0;
 }
 .img {
-    width: 50px ;
+    width: 35px ;
     margin: 25px 0 0 0;
 
 }
@@ -47,4 +55,7 @@
     border: none;
     background: dodgerblue;
     cursor: pointer;
+}
+.auth_form__input {
+    padding: 500px;
 }
